Bug 246602 - Changes to feComponentTransfer children do not update the filter effect
Summary: Changes to feComponentTransfer children do not update the filter effect
Status: RESOLVED FIXED
Alias: None
Product: WebKit
Classification: Unclassified
Component: SVG (show other bugs)
Version: WebKit Nightly Build
Hardware: Unspecified Unspecified
: P2 Normal
Assignee: Cameron McCormack (:heycam)
URL:
Keywords: CanvaBug, InRadar
Depends on:
Blocks: 232842
  Show dependency treegraph
 
Reported: 2022-10-16 19:44 PDT by Xidorn Quan
Modified: 2022-10-22 02:33 PDT (History)
5 users (show)

See Also:


Attachments
testcase (2.26 KB, text/html)
2022-10-16 19:44 PDT, Xidorn Quan
no flags Details

Note You need to log in before you can comment on or make changes to this bug.
Description Xidorn Quan 2022-10-16 19:44:35 PDT
Created attachment 463019 [details]
testcase

Steps to reproduce:
1. open the attached testcase
2. try to drag the slider

Expected result:
The brightness of the image should change.

Actual result:
The brightness of the image doesn't change.


I saw bug 99996, and this is probably similar to that, but that bug has been reported a decade ago, while this is a regression in Safari 16 (works as expected in Safari 15).
Comment 1 Radar WebKit Bug Importer 2022-10-16 20:52:44 PDT
<rdar://problem/101232007>
Comment 2 Cameron McCormack (:heycam) 2022-10-19 17:42:11 PDT
Bisecting shows this was a regression from bug 232842.
Comment 3 Cameron McCormack (:heycam) 2022-10-20 01:07:22 PDT
Pull request: https://github.com/WebKit/WebKit/pull/5579
Comment 4 EWS 2022-10-22 02:33:57 PDT
Committed 255869@main (4abefb791c76): <https://commits.webkit.org/255869@main>

Reviewed commits have been landed. Closing PR #5579 and removing active labels.